@@ -51,7 +51,7 @@ public class QuestSystem extends BaseGameSystem {
                 return;
             }
 
-            map.put(opcode.value().getValue(), handlerClass.newInstance());
+            map.put(opcode.value().getValue(), handlerClass.getDeclaredConstructor().newInstance());
         } catch (Exception e) {
             e.printStackTrace();
         }
